# backend/routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Auth\RegisterController;
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\TrackController;
 use Illuminate\Http\Request;
@@ -15,32 +16,25 @@ use Illuminate\Support\Facades\Route;
 | is assigned the "api" middleware group. Enjoy building your API!
 |
 */
-//Route::get('/getaudio/{fileName}', [
-//    'as' => 'audio',
-//    'uses' => 'TrackController@listenAudio'
-//]);
-//Route::get('/getaudio/{folder}/{filename}/{ext}', [TrackController::class, 'listenAudio', 'as' => 'audio']);FIXME delete from web.php and uncomment here (auth)
-
-Route::get('tracks/like', [TrackController::class, 'setTrackFavorite']);
-Route::get('tracks/unlike', [TrackController::class, 'setTrackUnfavorite']);
-
-//Route::get('tracks/search', [TrackController::class, 'search']);FIXME delete from web.php and uncomment here (auth)
-Route::middleware('auth')->get('tracks/fav', [TrackController::class, 'favorites']);
-
-//Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-//    return $request->user();
-//});
+Route::post('register', [RegisterController::class, 'create']);
 
 Route::group([
-
     'middleware' => 'api',
     'prefix' => 'auth'
-
 ], function ($router) {
-
     Route::post('login', [AuthController::class, 'login']);
     Route::post('logout', [AuthController::class, 'logout']);
     Route::post('refresh', [AuthController::class, 'refresh']);
     Route::post('me', [AuthController::class, 'me']);
-
 });
+
+Route::middleware('auth')->get('tracks/search', [TrackController::class, 'search']);
+Route::middleware('auth')->get('tracks/fav', [TrackController::class, 'favorites']);
+Route::middleware('auth')->post('tracks/like', [TrackController::class, 'setTrackFavorite']);
+Route::middleware('auth')->post('tracks/unlike', [TrackController::class, 'setTrackUnfavorite']);
+
+Route::get('getaudio/{folder}/{filename}/{ext}', [TrackController::class, 'listenAudio', 'as' => 'audio']);
+
+//Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
+//    return $request->user();
+//});
